Update and sync the java files and openapi.yaml
Revised the openapi.yaml and made appropriate changes to the java classes fixed minor bugs and replaced throws with returns
