# backend/src/main/java/com/senior/spm/controller/request/UpdateSprintTargetRequest.java
@@ -13,5 +13,5 @@ public class UpdateSprintTargetRequest {
 
     @NotNull(message = "Story point target is required")
     @Positive(message = "Story point target must be positive")
-    private Integer targetStoryPoint;
+    private Integer storyPointTarget;
 }
